# ubuntu-cppmf

./: .editorconfig  .gitignore  Jenkinsfile  Makefile  Readme.md
Dockerfiles/: .bashrc  Dockerfile.ssh.template  Dockerfile.template
Dockerfiles/rootfs/: entrypoint.sh
tests/: CMakeLists.txt  test.cpp  test_cpp11.cpp  test_cpp17_fs.cpp  test_cpp17_optional.cpp  test_cpp20.cpp
